  (ygrek)
- MPR#6605, OGPR#117: use ocamlfind, if available, to discover camlp4 path
  (Vincent Laporte)
- #20: add -dot and -man-related ocamldoc options
  (Gabriel Scherer)
- #10, PR#21: Fix manpages generation: properly pass the "manpage" tag.
  (Armaël Guéneau)
- #20: add -documentation support for parametrized flag
  (Gabriel Scherer, review by Rudi Grinberg and François Bobot)



OCamlbuild was included in the OCaml compiler distribution between
OCaml 3.10.0 (May 2007) and OCaml 4.02.3 (July 2015). The changes
below correspond to the subset of ocamlbuild-related changes in those
OCaml releases.
-------------------------------------------------------------------------


OCaml 4.02.3 (27 Jul 2015):
---------------------------

OCaml 4.02.2 (17 Jun 2015):
---------------------------

OCamlbuild:
- MPR#6237: explicit "infer" tag to control or disable menhir --infer
  (Hugo Heuzard)
- MPR#6625: pass -linkpkg to files built with -output-obj.
  (whitequark)
- MPR#6702: explicit "linkpkg" and "dontlink(foo)" flags
  (whitequark, Gabriel Scherer)
- MPR#6712: Ignore common VCS directories
  (whitequark)
- MPR#6720: pass -g to C compilers when tag 'debug' is set
  (whitequark, Gabriel Scherer)
- MPR#6733: add .byte.so and .native.so targets to pass
  -output-obj -cclib -shared.
  (whitequark)
- MPR#6733: "runtime_variant(X)" to pass -runtime-variant X option.
  (whitequark)
- MPR#6774: new menhir-specific flags "only_tokens" and "external_tokens(Foo)"
  (François Pottier)

Bug fixes:
- MPR#6626: ocamlbuild on cygwin cannot find ocamlfind
  (Gergely Szilvasy)
- MPR#6640: ocamlbuild: wrong "unused tag" warning on "precious"
  (report by user 'william')
- MPR#6652: ocamlbuild -clean does not print a newline after output
  (Damien Doligez, report by Andi McClure)
- MPR#6793: ocamlbuild passes nonsensical "-ocamlc ..." commands to menhir
  (Gabriel Scherer, report by Damien Doligez)
- MPR#6893: ocamlbuild:  "tag not used" warning when using (p)dep